# lc-invoice-checker

./: .env.example  .gitignore  CLAUDE.md  Makefile  README-2.md  README.md  compress_screenshots.py  docker-compose.yml  run-book.md
docs/: APIGuide.md  agentic-future-plan.md  agentic-research-references.md  bailian-free-models.md  jdk21-install.md  operator-runbook.md  rewrite-plan.md  ui-svc-host-guide.md  ui-system.md
docs/diagrams/: architecture.excalidraw  deploy-architecture.excalidraw  flow-1-upload.puml  flow-2-async-processing.puml  flow-3-sse-stream.puml
docs/refer-doc/: AI-Engineer-test-case-v2.txt  lc-parser-requirements.md  local-llm-REQUIREMENTS.md  logic-flow.md  mt700-expired-strict.txt  mt700-fob-eur-flexible.txt  mt700-large-machinery.txt  mt700-tight-textile.txt  sample_lc_mt700.txt  ucp600_isbp821_invoice_rules.md
extractors/: CONTRACT.md  README.md
extractors/docling/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml
extractors/docling/app/: __init__.py  contract.py  docling_extractor.py  fetching.py  field_extractor.py  llm_field_extractor.py  main.py  observability.py
extractors/mineru/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  pyproject.toml
extractors/mineru/app/: __init__.py  contract.py  errors.py  field_extractor.py  llm_field_extractor.py  main.py  mineru_extractor.py  observability.py
infra/: README.md  docker-compose.yml
infra/postgres/data/: postmaster.pid
infra/postgres/data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
infra/postgres/data/base/16384/: 1247  1247_fsm  1249  1259  1259_fsm  1259_vm  16390  16393  16394  16395  16402  16403  16410  16417  16418  16425  16432  16433  16440  16447  16448  16455  16462  16463  16470  16471  16472  2579  2604  2606  2606_fsm  2608  2610  2618  2618_fsm  2618_vm  2619  2620  2656  2657  (+24 more)
infra/postgres/data/base/5/: 2619  pg_internal.init
infra/postgres/data/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
infra/postgres/init/: 01-schema.sql
infra/scripts/: setup-mac.sh  start-local.sh
lc-checker-api/: .dockerignore  Dockerfile  build.gradle.kts
lc-checker-api/src/main/resources/: application.yml
lc-checker-api/src/main/resources/prompts/: README.md  goods-description-check.st  invoice-extract.st  mt700-45A-parse.st  mt700-46A-parse.st  mt700-47A-parse.st  vision-invoice-extract.st
lc-checker-api/src/main/resources/rules/: catalog.yml
lc-checker-svc/: README.md  build.gradle.kts  settings.gradle.kts
lc-checker-svc/src/main/resources/: application.yml  logback-json.xml  logback-spring.xml
lc-checker-svc/src/main/resources/fields/: field-pool.yaml  lc-tag-mapping.yaml
lc-checker-svc/src/main/resources/prompts/: README.md  address-country-check.st  applicant-name-check.st  beneficiary-name-check.st  goods-description-check.st  invoice-extract-text.st  quantity-tolerance-check.st  unit-price-check.st  vision-invoice-extract.st
lc-checker-svc/src/main/resources/prompts/check/: bank-001-language.st  isbp-c1-lc-number-reference.st  isbp-c10-charges-deductions.st  isbp-c2-signature.st  isbp-c3-goods-description.st  isbp-c4-unit-price.st  isbp-c5-applicant-name.st  isbp-c6-beneficiary-name.st  isbp-c7-country-of-origin.st  isbp-c8-trade-terms.st  ucp-14d-cross-document.st  ucp-14e-address-country.st  ucp-18b-amount.st  ucp-18b-math.st  ucp-30a-quantity-tolerance-about.st  ucp-30b-quantity-tolerance-bulk.st
lc-checker-svc/src/main/resources/prompts/extract/: invoice-extract-vision.st
lc-checker-svc/src/main/resources/prompts/fragments/: cross-cutting-tolerances.txt
lc-checker-svc/src/main/resources/prompts/system/: check-system.st
lc-checker-svc/src/main/resources/rules/: catalog.yml  refer.txt  refer2.txt
lc-checker-svc/src/main/resources/samples/: samples.yaml
lc-checker-svc/src/main/resources/static/: docs.html
llm/mlx-server/: .env.example  README.md  pyproject.toml
llm/mlx-server/app/: main.py  manager.py  registry.py  routes.py  schemas.py  settings.py
refer-doc/: lc_checker_v2.html
test/: README.md  check.sh
test/fixtures/: generate_sample_invoice.py  requirements.txt  stream.sh
test/golden/: 01-widgets-singapore__fail.txt  01-widgets-singapore__pass.txt  02-apparel-acme__fail.txt  02-apparel-acme__pass.txt  03-painting-artfinder__fail.txt  03-painting-artfinder__pass.txt  04-boots-baton-rouge__fail.txt  04-boots-baton-rouge__pass.txt  README.md  invoice-01-widgets-singapore__fail.txt
test/mt700/: inc-0-pass.txt
ui/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
ui/src/: App.tsx  types.ts
ui/src/api/: client.ts  sse.ts
ui/src/components/check/: CitationPopover.tsx  ComplianceCheckPanel.tsx  ComplianceReferenceModal.tsx  ComplianceSidebar.tsx  FieldCard.tsx  LlmAuditPane.tsx  PhaseSection.tsx  RuleCard.tsx  RuleCatalogStrip.tsx  SourceDrawer.tsx  StatusFilterBar.tsx
ui/src/components/invoice/: InvoicePanel.tsx  InvoiceViewer.tsx  MarkdownView.tsx
ui/src/components/lc/: FieldBlockRow.tsx  LcSidebar.tsx  LcSourceView.tsx
ui/src/components/process/: ProcessBar.tsx
ui/src/components/queue/: QueueWaitCard.tsx
ui/src/components/results/: TraceModal.tsx
ui/src/components/shell/: ApiProgressBar.tsx  ConfirmDialog.tsx  HealthIndicator.tsx  HistoryDropdown.tsx  PipelineFlow.tsx  SessionStrip.tsx  TopNav.tsx  steps.ts
ui/src/components/tabs/: CompareTab.tsx  InvoiceAuditTab.tsx  LcAuditTab.tsx  ReviewTab.tsx  RuleChecksTab.tsx
ui/src/components/upload/: SamplePreview.tsx  UploadStep.tsx
ui/src/data/: complianceReference.ts  invoiceFields.ts  regs.ts  samples.ts  ucpIsbpExcerpts.ts
ui/src/hooks/: useApiProgress.ts  useCheckSession.ts  useConfirm.ts  useFieldRegistry.ts  useInvoiceFieldView.ts  useMandatoryTags.ts  usePipelineConfig.ts  useQueueStatus.ts  useRuleCatalog.ts  useScrollspy.ts
ui/src/lib/: apiClient.ts  envelope.ts  formatDuration.ts  formatField.ts  healthBus.ts  validation.ts
ui/src/pages/: SessionPage.tsx  UploadPage.tsx
ui/src/styles/: index.css
(+218 files in other folders)
