[project]
name = "docling-svc"
version = "1.0.0"
description = "LC Invoice Checker — Docling-backed PDF extractor service. Implements extractors/CONTRACT.md v1.0."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "extractor-dev (lc-checker team)" },
]
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "pydantic>=2.8",
    # Docling — PDF → markdown/structured
    # 2.70 dropped Python 3.9; latest 2.91.x at time of contract freeze
    "docling>=2.70,<3.0",
    # Input handling for URL mode
    "httpx>=0.27",
    # Date normalization for invoice_date
    "python-dateutil>=2.9",
    # Optional LLM structuring path (used only if LLM_API_KEY env var is present)
    "openai>=1.50",
    # Structured JSON logs (contract §Logging)
    "python-json-logger>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
