[project]
name = "mineru-svc"
version = "1.0.0"
description = "LC Invoice Checker — MinerU-backed PDF extractor service. Implements extractors/CONTRACT.md v1.0."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "extractor-dev (lc-checker team)" },
]
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "pydantic>=2.8",
    # MinerU (aka magic-pdf) — PDF parser with native scanned-PDF detection.
    # Pinned wide range since MinerU's API surface shifts; our wrapper
    # handles both the newer `mineru.pipeline` and legacy `magic_pdf` APIs.
    "mineru[all]>=1.0",
    # PyMuPDF is a MinerU dep already, but we rely on it directly for the
    # pre-OCR density probe used by `_detect_image_based`. Declared explicitly
    # so the dependency is visible at review time.
    "PyMuPDF>=1.24",
    # URL input mode
    "httpx>=0.27",
    # Date normalization
    "python-dateutil>=2.9",
    # Optional LLM structuring (Tier-2)
    "openai>=1.50",
    # Structured JSON logs
    "python-json-logger>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
