[project]
name = "mineru-svc"
version = "1.0.0"
description = "LC Invoice Checker — MinerU-backed PDF extractor service. Implements extractors/CONTRACT.md v1.0."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "extractor-dev (lc-checker team)" },
]
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "pydantic>=2.8",
    # MinerU >= 3.0 — PDF parser. API: doc_analyze_streaming + union_make.
    # Package starts at v2.0 on PyPI; we require >=2.0 to guarantee the
    # mineru.backend.pipeline API surface.
    "mineru[all]>=2.0",
    # PyMuPDF is a MinerU dep already, but we rely on it directly for the
    # pre-OCR density probe used by `_detect_image_based`. Declared explicitly
    # so the dependency is visible at review time.
    "PyMuPDF>=1.24",
    # URL input mode
    "httpx>=0.27",
    # Date normalization
    "python-dateutil>=2.9",
    # Structured JSON logs
    "python-json-logger>=2.0",
    # Langfuse via OpenTelemetry. We drive OTel directly (see app/observability.py)
    # instead of relying on langfuse SDK helpers, so the LLM call lands in
    # Langfuse as a Generation regardless of SDK version. The langfuse package
    # itself is kept as a transitive convenience for any future Langfuse-
    # specific API calls (datasets, scoring); it is NOT used for tracing.
    "langfuse>=3.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "opentelemetry-sdk>=1.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
