[project]
name = "mlx-server"
version = "0.1.0"
description = "Local MLX-backed LLM service for lc-checker — OpenAI-compatible /v1/chat/completions on Apple Silicon."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "lc-checker team" },
]
dependencies = [
    "mlx-vlm>=0.3.4",
    "mlx-lm>=0.21.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.8",
    "pydantic-settings>=2.5",
    "pillow>=10.4",
    "python-multipart>=0.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
